Finished match info query
Change-Id: I5b04e1cc0d9e5798553d72b8cf7c522f4ed3ba29

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "pug": "^2.0.0-rc.2"
   },
   "dependencies": {
-    "console.table": "^0.8.0"
+    "console.table": "^0.8.0",
+    "minimist": "^1.2.0"
   }
 }
