--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Statistics about billiards league",
   "main": "index.js",
   "scripts": {
+    "build": "NODE_ENV=production babel-node src/index.js",
     "start": "NODE_ENV=development babel-node src/index.js"
   },
   "repository": {
